[tool.poetry]
name = "async_yoomoney"
version = "0.1.0"
description = ""
authors = ["prodream <sushkoos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.9.2"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
